adapt mali driver and adds some debugging methods
For user-space Gpus driven mali on arm platform, both gbm and opengles are implemented
in libmali.so.1.9.0, so the code changes the default location of the gles library to c
all libmali.so.1.9.0. You'll also need to do that: ln -sf libgbm.so -> libmali.so.1.9.0
libmali.so.1.9.0 to enable gpu hardware acceleration

Signed-off-by: zack <zack.huangzihan@outlook.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.0)
 project(SDL2_test)
 
-if(NOT TARGET SDL2::SDL2-static)
-    find_package(SDL2 2.0.23 REQUIRED COMPONENTS SDL2-static SDL2test)
-endif()
+#if(NOT TARGET SDL2::SDL2-static)
+#    find_package(SDL2 2.0.23 REQUIRED COMPONENTS SDL2-static SDL2test)
+#endif()
 
 enable_testing()
 
@@ -38,7 +38,7 @@ link_libraries(
         ps2_drivers
 )
 else()
-    link_libraries(SDL2::SDL2test SDL2::SDL2-static)
+    link_libraries(SDL2::SDL2test SDL2::SDL2)
 endif()
 
 if(WINDOWS)
